FEB 17 2021
	Minor Controller refactoring. Some functions, notable currentZ() and objectAt() have been refactored. Private scripts may need updating.
	Controller now allows you to enable/disable bot paint (i.e. progress reports), bot status, bot coords, and bot xp counter.
	Controller is now completely documented. Phew. 
	Added documentation in most areas with public methods.  
	Deleted CommandListener because it was useless. 
	
	*** SCRIPT BREAKING CHANGES ***
	currentZ() has been renamed to currentY().
	objectAt() has been refactored. Direction and object ID are no longer needed.
	getInventoryItemIdSlot(int itemId) renamed to getInventoryItemSlotIndex(int itemId).
	

FEB 16 2021
	Global XP/hr calculation is now accurate.
	AIOFighter, AIOThiever, LimpySnapez, GetMeToArdougne, HarvesterTrainer, HerbHarvester, HerbIdentifier, PowerFletcha now have paint progress reports. 
	Flaxx0r now tracks flax per hour.
	Searos updated Controller isDoorOpen to work on the crafting guild door.
	Searos updated many of his scripts to support Paint
	isInCombat() and isNpcInCombat() are now realtime and do not work based off the health bar. Thieving and fighting are _much_ more efficient!
	Added DamRc by Damrau
	
FEB 15 2021
    The client now has a patcher for patching the JAR for callbacks, see updated readme and https://gitlab.com/idlersc/idlersc_patcher
    The client now shows status, coordinates, and XP gained on the main client window via the DrawCallback class.
    paintInterrupt() is now available to scripts. This is how you paint on the screen -- see AKMiner for an example.
    AKMiner now has a basic paint progress report.
    PositionListener, MessageListener axed
    MessageListener replaced with MessageCallback
    Fixed NPE in openBank() caused by no teller or bank chest around.
    Fixed annoying bug in walkPath()
    Scripts can now modify the status text via Controller.setStatus();
    "npcMessage" has been changed to "questMessage" to be more consistent