@@ -69,7 +69,6 @@ public class WindowListener implements Runnable {
 	        try {
 				Thread.sleep(40);
 			} catch (InterruptedException e) {
-				// TODO Auto-generated catch block
 				e.printStackTrace();
 			}
 		}
